# pydrology

./: .gitignore  CODEOWNERS  LICENSE  README.md  setup.cfg
Examples/: acis_data_request.ipynb  nexrad_data_request.ipynb  usgs_data_request.ipynb
examples/: acis_data_batch_request.ipynb  acis_data_request.ipynb  netcdf_test.ipynb  nexrad_data_request.ipynb  plot_radar_sweep.ipynb  usgs_data_batch_request.ipynb  usgs_data_request.ipynb  usgs_prcp_data_request.ipynb
examples/config_files/: nexrad_config.yml
pydrology/: config.py  image.py  musings.py  nexrad_download.py  nexrad_processing.py  plotting.py  time_series.py
pydrology/acis/: acis_request.py
pydrology/nexrad/: nexrad_config.py  nexrad_processing.py
pydrology/usgs/: usgs_prcp_request.py  usgs_request.py
src/pydrology/: data_requests.py  nexrad_processing.py  plotting.py  time_series.py
src/pydrology/Data_Requests/: acis_data.py  usgs_data.py
src/pydrology/data_request_scripts/: acis_data.py
src/pydrology/data_requests/: acis_data.py  usgs_data.py
src/pydrology/plotting/: plotting.py
src/pydrology/time_series/: analysis.py
tests/: test_acis_data.py  test_usgs_data.py
