[metadata]
name = pydrology-alex-l-young
version = 0.0.1
author = Alex Young
description = A Python package for accessing and processing hydrologic data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-l-young/pydrology
project_urls =
    Bug Tracker = https://github.com/alex-l-young/pydrology/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
    requests
    pytest
    notebook
    scipy
    traces

[options.packages.find]
where = src