[metadata]
name = pydrology
version = 1.0.0
author = Alex Young
author_email = pydrology@googlegroups.com
description = A Python package for accessing and processing hydrologic data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-l-young/pydrology
project_urls =
    Bug Tracker = https://github.com/alex-l-young/pydrology/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
    requests
    pytest
    notebook
    scipy
    traces
    boto3
    nexradaws
    cftime
    netCDF4
    metpy

[options.packages.find]
where = src